--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 #main, #chats {
-    width: 500px;
+    width: 100%;
     margin: auto;
     text-align: left;
     background: white;
@@ -61,13 +61,23 @@ form input[type=text] {
 .chat {
     padding: 5px;
     margin-bottom: 5px;
-    background-color: #eee;
+    background-color: rgb(185, 178, 169);
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 100px;
+    border: 5px solid rgb(96, 79, 79);
+    border-radius: 10px;
 }
 
 .chat .username {
     font-weight: 800;
 }
-
+.chat .text {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
 .chat:hover {
     background-color: #ddd;
 }
