Worked on some advanvced content and css

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -15,10 +15,12 @@ body {
     border-width: 0 1px 1px 1px;
 }
 #main h1 {
+    color: blueviolet;
     margin-top: 0;
     font-size: 35px;
     margin-bottom: 5px;
     padding: 5px;
+
 }
 
 #main h1 span {
@@ -57,7 +59,24 @@ form input[type=text] {
     font-size: 12px;
     padding: 5px;
 }
+#rooms {
+    font-weight: 800;
+    color: cornflowerblue;
+}
 
+#rooms select {
+    color: green;
+    font-style: italic;
+}
+
+#rooms button {
+    border: 5px solid red;
+    border-radius: 5px;
+}
+
+#rooms button:hover {
+    background-color: wheat;
+}
 .chat {
     padding: 5px;
     margin-bottom: 5px;
@@ -71,22 +90,27 @@ form input[type=text] {
 }
 
 .chat .username {
+    position: absolute;
     font-weight: 800;
 }
 .chat .text {
+    position: relative;
+    top: 20%;
     text-align: center;
     font-size: 20px;
     font-weight: 500;
+}
+.chat.friend:hover {
+    background-color: rgb(68, 194, 197);
 }
 .chat:hover {
     background-color: #ddd;
 }
 .chat .username:hover {
-    background-color: red;
-    border-radius: 100px;
-    width: 100px;
+    background-color: rgb(70, 4, 125);
+    border-radius: 5px;
+    border: 2px solid black;
     cursor: pointer;
-
 }
 
 .spinner {
@@ -98,9 +122,26 @@ form input[type=text] {
 .spinner img {
     padding: 10px;
 }
-
 .friend {
     color: #fff;
     background-color: #0090da;
 }
+#friendsList {
+    width: 180px;
+    border: 5px solid black;
+    border-radius:10px;
+    text-align: center;
+    font-weight: 800;
+}
+#friendsList li {
+  color: red;
+  text-align: left;
+}
 
+.time {
+  position: relative;
+  top: 50%;
+  float: right;
+  color: blue;
+  font-style: italic;
+}
